--- a/Frontend/src/app/modules/authenticated/auth-home/auth-home.component.html
+++ b/Frontend/src/app/modules/authenticated/auth-home/auth-home.component.html
@@ -1,1 +1,5 @@
-<p>auth-home works!</p>
+<main>
+  <app-navbar />
+  <h1>Welcome Back {{this.userService.getName()}}</h1>
+</main>
+<router-outlet />
