--- a/Frontend/src/app/modules/authenticated/auth-home/auth-home.component.html
+++ b/Frontend/src/app/modules/authenticated/auth-home/auth-home.component.html
@@ -1,5 +1,9 @@
 <main>
   <app-navbar />
-  <h1>Welcome Back {{this.userService.getName()}}</h1>
+  <div class="WelcomeBack" *ngIf="userService.getUsername()">
+    <h1>Welcome {{this.userService.getName()}}</h1>
+    <h1>Hello</h1>
+  </div>
 </main>
 <router-outlet />
+
